--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,21 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.img__list
+{
+  display: flex;
+  flex-direction: column;
+}
+
+.img__list:not(:last-child)
+{
+  margin-bottom: 20px;
+}
+
+.img__item
+{
+  width: 300px;
+  height: 200px;
+}
+
